<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

    <ImageView
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            app:srcCompat="@android:color/darker_gray"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="8dp"
            android:hint="@string/email_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="8dp"
            android:hint="@string/password_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingRight="8dp"/>
    <Button
            android:text="@string/login_text"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            android:background="@drawable/button_ripple"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
    />
    <TextView
            android:text="@string/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/signup_text"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etCellphone"
            android:background="@drawable/button_ripple"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingLeft="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name_text"
            android:paddingRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etCellphone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/cellphone_text"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

    <android.support.constraint.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupGroup"
            app:constraint_referenced_ids="etCellphone,btnSignUp,etName,btnCancel"
            android:visibility="gone"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loader"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="gone"/>
    <Button
            android:text="@string/cancel_text"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:background="@drawable/button_ripple"
            android:textColor="@android:color/white"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etCellphone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnSignUp"/>

    <android.support.constraint.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginGroup"
            app:constraint_referenced_ids="etPassword,etEmail"/>
</android.support.constraint.ConstraintLayout>