<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="image" type="String"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.new_item.NewItemActivity">


        <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/itemImage"
                app:cardCornerRadius="80dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/plateImage"
                    android:background="#ccc"
                    app:imgBase64='@{image!=null? image:""}'
                    android:scaleType="centerCrop"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_add_a_photo"
                    android:id="@+id/addPhoto"
                    android:padding="50dp"/>
        </android.support.v7.widget.CardView>
        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/size_50"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/plateName"
                android:background="@drawable/edit_text_background" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/itemImage" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:paddingLeft="8dp"
                android:hint="@string/plate_name_text"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/size_50"
                android:ems="10"
                android:id="@+id/platePrice"
                android:background="@drawable/edit_text_background" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/plateName" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:paddingLeft="8dp"
                android:hint="@string/plate_price_text" android:inputType="number"/>
        <Button
                android:text="@string/save_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSavePlate"
                android:background="@drawable/button_ripple" android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/platePrice"/>
    </android.support.constraint.ConstraintLayout>
</layout>
