<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="orden" type="com.cristian_developer.toma_la_orden.data.model.Orden"/>
    </data>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:cardElevation="4dp" app:cardCornerRadius="8dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@string/plates_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
            />
            <TextView
                    android:text="@string/teble_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"/>
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:text="@{orden.mesa}"
                    android:id="@+id/textView4" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" tools:text="500"
                    android:textSize="30dp" android:gravity="center"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{orden.platos}"
                    android:id="@+id/textView5"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="2 Hamburguesas\n1 Cabra\n2 Hamburguesas\n1 Cabra\n2 Hamburguesas\n1 Cabra"
                    app:layout_constraintTop_toTopOf="@+id/textView2"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:dateFormat="@{orden.fecha}"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    tools:text="12/03/2019" app:layout_constraintEnd_toStartOf="@+id/textView4"
                    android:layout_marginEnd="8dp"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/imageView2"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/textView4"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView4"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>
